Bug 1305672: Prevent assertion. r=jwwang

Assertion would occur if the duration of decoded samples queued was greater than buffering threshold

MozReview-Commit-ID: CcheIhcmL5S